[gd_scene load_steps=12 format=3 uid="uid://jr0utgss3wkj"]

[ext_resource type="Script" uid="uid://b6tw2uhx10t78" path="res://01 - main/main.gd" id="1_4dugh"]
[ext_resource type="Theme" uid="uid://8xl1vqs4t5v1" path="res://98 - themes/panel.tres" id="2_67ri8"]
[ext_resource type="Script" uid="uid://c857wljvgmakc" path="res://01 - main/Panel.gd" id="3_grrlh"]
[ext_resource type="Texture2D" uid="uid://nhk36ipc4aym" path="res://04 - assets/50xCAD_icon.png" id="4_7kw7l"]
[ext_resource type="Texture2D" uid="uid://c4mr31hiu74il" path="res://04 - assets/50xohm_icon.png" id="5_biiqy"]
[ext_resource type="PackedScene" uid="uid://brqo40txkrn4i" path="res://06 - ohmlaw/ohm_law_calc.tscn" id="5_bsumw"]
[ext_resource type="Texture2D" uid="uid://ckmu5u8w01fg2" path="res://04 - assets/50xsettings_icon.png" id="6_83ibq"]
[ext_resource type="PackedScene" uid="uid://li1usm2eankn" path="res://03 - settings/settings.tscn" id="6_fwcvl"]
[ext_resource type="Texture2D" uid="uid://dnh4mahqn01om" path="res://04 - assets/50xexit_icon.png" id="7_7ceoq"]
[ext_resource type="PackedScene" uid="uid://bsr815inei87h" path="res://05 - camp_cad/scenes/camp_cad_v2.tscn" id="7_na0o7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hyql3"]
modulate_color = Color(0.0049992, 0.470172, 0.400768, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4dugh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_67ri8")
theme_override_styles/panel = SubResource("StyleBoxTexture_hyql3")
script = ExtResource("3_grrlh")

[node name="BG" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.229112, 0.229112, 0.229112, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Selector Bar" type="Control" parent="MarginContainer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/Selector Bar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_67ri8")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Selector Bar/Panel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_right = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftColumn" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Selector Bar/Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="CalculatorBox" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Selector Bar/Panel/MarginContainer/LeftColumn"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="Calculators Menu" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Selector Bar/Panel/MarginContainer/LeftColumn/CalculatorBox"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="CAD button" type="TextureButton" parent="MarginContainer/HBoxContainer/Selector Bar/Panel/MarginContainer/LeftColumn/CalculatorBox/Calculators Menu"]
layout_mode = 2
texture_normal = ExtResource("4_7kw7l")
stretch_mode = 3

[node name="Ohm Law button" type="TextureButton" parent="MarginContainer/HBoxContainer/Selector Bar/Panel/MarginContainer/LeftColumn/CalculatorBox/Calculators Menu"]
layout_mode = 2
texture_normal = ExtResource("5_biiqy")
stretch_mode = 3

[node name="SettingsBox" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Selector Bar/Panel/MarginContainer/LeftColumn"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
theme_override_constants/separation = 7
alignment = 2

[node name="Settings button" type="TextureButton" parent="MarginContainer/HBoxContainer/Selector Bar/Panel/MarginContainer/LeftColumn/SettingsBox"]
layout_mode = 2
texture_normal = ExtResource("6_83ibq")
stretch_mode = 3

[node name="Exit button" type="TextureButton" parent="MarginContainer/HBoxContainer/Selector Bar/Panel/MarginContainer/LeftColumn/SettingsBox"]
layout_mode = 2
texture_normal = ExtResource("7_7ceoq")
stretch_mode = 3

[node name="Calculator Window" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/Calculator Window"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.399994
offset_top = -0.6
offset_right = -0.400024
offset_bottom = -0.599976
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_67ri8")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Calculator Window/Panel"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_top = 0.005
anchor_right = 0.995
anchor_bottom = 0.995
grow_horizontal = 2
grow_vertical = 2

[node name="OhmLawCalc" parent="MarginContainer/HBoxContainer/Calculator Window/Panel/MarginContainer" instance=ExtResource("5_bsumw")]
visible = false
layout_mode = 2

[node name="Settings" parent="MarginContainer/HBoxContainer/Calculator Window/Panel/MarginContainer" instance=ExtResource("6_fwcvl")]
visible = false
layout_mode = 2

[node name="Camp Cad2" parent="MarginContainer/HBoxContainer/Calculator Window/Panel/MarginContainer" instance=ExtResource("7_na0o7")]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/HBoxContainer/Selector Bar/Panel/MarginContainer/LeftColumn/CalculatorBox/Calculators Menu/CAD button" to="." method="_on_cad_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Selector Bar/Panel/MarginContainer/LeftColumn/CalculatorBox/Calculators Menu/Ohm Law button" to="." method="_on_ohm_law_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Selector Bar/Panel/MarginContainer/LeftColumn/SettingsBox/Settings button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Selector Bar/Panel/MarginContainer/LeftColumn/SettingsBox/Exit button" to="." method="_on_exit_button_pressed"]
[connection signal="bg_color" from="MarginContainer/HBoxContainer/Calculator Window/Panel/MarginContainer/Settings/Options_OptionsWindow/MarginContainer/BG Color" to="Panel" method="_on_bg_color_bg_color"]

[editable path="MarginContainer/HBoxContainer/Calculator Window/Panel/MarginContainer/Settings"]
